# kostryDimplomovka

withGenreg/: CMakeLists.txt  cycleCounter.cpp  cycleCounter.h  cycleCounting.cpp  cycleCounting.h  cycleFinder.cpp  cycleFinder.h  cycleReducer.cpp  cycleReducer.h  grafyPreVsetkych.h  mainRegularGraphs.cpp  pocitanieCyklov.cpp  processingRegularGraphs.cpp  processingRegularGraphs.h  spanningTreeCounting.cpp  spanningTreeCounting.h
withSnarkhunter/: CMakeLists.txt  mainRegularGraphs.cpp  processingRegularGraphs.cpp  processingRegularGraphs.h  snarkhunterOutputPrinter.cpp  spanningTreeCounting.cpp  spanningTreeCounting.h
